# club_cms/app/Http/Controllers/Api/AuthController.php
@@ -6,6 +6,12 @@ use App\Http\Controllers\Controller;
 use App\Http\Requests\AuthRequest;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
+use Illuminate\Validation\ValidationException;
+use App\Http\Requests\UserRequest;
+use App\Models\User;
+use App\Models\Member;
+use App\Http\Resources\UserResource;
+use App\Http\Resources\MemberResource;
 use Exception;
 
 /**
@@ -104,6 +110,67 @@ class AuthController extends Controller
             return response()->json([
                 'ok' => false,
                 'message' => 'Error al cerrar sesión por error inesperado',
+                'error' => $e->getMessage()
+            ], 500);
+        }
+    }
+
+    /**
+     * @OA\Post(
+     *  path="/auth/register",
+     *  summary="Crear un nuevo usuario",
+     *  tags={"Auth"},
+     *  security={{"bearerAuth":{}}},
+     *  @OA\RequestBody(
+     *   required=true,
+     *   @OA\JsonContent(ref="#/components/schemas/UserRequest")
+     *  ),
+     *  @OA\Response(
+     *   response=201,
+     *   description="Usuario registrado correctamente",
+     *   @OA\JsonContent(
+     *    type="object",
+     *    @OA\Property(property="ok", type="boolean", example=true),
+     *    @OA\Property(property="message", type="string", example="Usuario registrado correctamente"),
+     *    @OA\Property(property="court", ref="#/components/schemas/CourtResource")
+     *   )
+     *  ),
+     *  @OA\Response(
+     *    response=422,
+     *    description="Error de validación",
+     *    @OA\JsonContent(ref="#/components/schemas/ValidationErrorResponse")
+     *  ),
+     *  @OA\Response(
+     *   response=500,
+     *   description="Error al crear la pista",
+     *   @OA\JsonContent(ref="#/components/schemas/ErrorResponse")
+     *  )
+     * )
+     */
+    public function register(UserRequest $request) {
+        try {
+            $user = User::create($request->validated());
+            $member = Member::create([
+                'user_id' => $user->id,
+                'membership_date' => now()->toDateString(),
+                'status' => 'active'
+            ]);
+            return response()->json([
+                'ok' =>true,
+                'message' => 'Usuario registrado correctamente',
+                'user' => new UserResource($user),
+                'member' => new MemberResource($member)
+            ]);
+        } catch (ValidationException $e) {
+            return response()->json([
+                'ok' => false,
+                'message' => 'Error de validación',
+                'errors' => $e->errors()
+            ], 422);
+        } catch (Exception $e) {
+            return response()->json([
+                'ok' => false,
+                'message' => 'Error al registrar usuario por error inesperado',
                 'error' => $e->getMessage()
             ], 500);
         }
